# airflow-fargate-cdk

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Readme.md  cdk.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml
airflow/: airflow-requirements.txt  docker-compose.yml
airflow/dags/: my_first_dag.py
airflow/dags/mercado_bitcoin/: README.md  mercado_bitcoin_dag.py
infrastructure/: app.py  cdk-requirements.txt  cdk.json  config.py  readme.md  setup.py
infrastructure/cdk/: configs.py  defaults.py  stack.py
infrastructure/cdk/components/: airflow_service_components.py  ec2.py  ecr.py  ecs.py  elasticache.py  rds.py  secretsmanager.py  ssm.py
scripts/: dev_clean_local.sh  dev_deploy_local.sh  dev_test_local.sh
tests/: conftest.py  test_infrastructure.py  test_infrastructure_ecs.py  test_ssm.py  test_stack.py
